test/fails/bad_parsing/bad_name1.lgl
void main() {
    int int = 5;
}
